re_app/manifests/spring-boot-helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: demo-app
  name: spring-boot-helloworld
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: demo-app
    matchLabels:
      app.kubernetes.io/name: spring-boot-helloworld
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-boot-helloworld
        app.kubernetes.io/part-of: demo-app
      name: spring-boot-helloworld
    spec:
      containers:
      - image: ghcr.io/amitisvoranu/demo-app/spring-boot-helloworld:latest
        imagePullPolicy: Always
        name: spring-boot-helloworld
        ports:
        - containerPort: 8080
      restartPolicy: Always
