re_app/manifests/python-flask-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: python-flask-hello-world
    app.kubernetes.io/part-of: demo-app
  name: python-flask-hello-world
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app.kubernetes.io/name: python-flask-hello-world
    app.kubernetes.io/part-of: demo-app
  type: LoadBalancer
status: {}
